<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.emu.pong.PlayerSelect">

    <TextView
        android:text="@string/NumPlayersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:id="@+id/numPlayersTV"
        android:textSize="30sp" />

    <Button
        android:text="@string/onePButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/onePButton"
        android:layout_below="@+id/numPlayersTV"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/twoPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twoPButton"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/onePButton"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/threePButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/threePButton"
        android:layout_below="@+id/twoPButton"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/fourPButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fourPButton"
        android:layout_below="@+id/threePButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
