<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.emu.pong.HomeScreen">

    <TextView
        android:text="@string/MultiPong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/multiPongTV"
        android:textSize="50sp" />

    <Button
        android:text="@string/CreateButton"
        android:layout_height="50sp"
        android:id="@+id/createButton"
        android:layout_width="120sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp" />

    <Button
        android:text="@string/JoinButton"
        android:layout_height="50sp"
        android:id="@+id/joinButton"
        android:layout_width="120sp"
        android:layout_marginEnd="35dp"
        android:layout_alignTop="@+id/createButton"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
